src/component/resource_gauge/snapshots/envision__component__resource_gauge__tests__snapshot_no_legend.snap
---
source: src/component/resource_gauge/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│CPU ███████████████▓▓▓▓▓▓▓│░░░░░░░░░░░░░░░░░░░░░│
└────────────────────────────────────────────────┘
