src/component/resource_gauge/snapshots/envision__component__resource_gauge__tests__snapshot_over_limit.snap
---
source: src/component/resource_gauge/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│MEM ██████████│█████████ 1200Mi / 500Mi / 1000Mi│
└────────────────────────────────────────────────┘
