src/component/resource_gauge/snapshots/envision__component__resource_gauge__tests__snapshot_zero_limit.snap
---
source: src/component/resource_gauge/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│GPU ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 0 / 0 / 0│
└────────────────────────────────────────────────┘
